[tool.poetry]
name = "pypi-package-asset-analyzer"
version = "0.1.0"
description = ""
authors = ["William Schmitt <william.schmitt@snowflake.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
